added more user interface

--- a/index.html
+++ b/index.html
@@ -12,7 +12,20 @@
         TIC-TAC-TOE
     </header>
     <main class="content">
-        
+        <div class="grid">
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+        </div>
     </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
