--- a/index.html
+++ b/index.html
@@ -13,15 +13,23 @@
     </header>
     <main class="content">
         <div class="grid">
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
+            <div class="cell cell-1"></div>
+            <div class="cell cell-2"></div>
+            <div class="cell cell-3"></div>
+            <div class="cell cell-4"></div>
+            <div class="cell cell-5"></div>
+            <div class="cell cell-6"></div>
+            <div class="cell cell-7"></div>
+            <div class="cell cell-8"></div>
+            <div class="cell cell-9"></div>
+        </div>
+        <div class="choose">
+            <div >
+               <button class="X">X</button> 
+            </div>
+            <div >
+                <button class="O">O</button>
+            </div>
         </div>
     </main>
     <footer>
